feat: Statik blog eklendi, navbar güncellendi ve SEO iyileştirmeleri yapıldı

--- a/pages/gizlilik-politikasi.html
+++ b/pages/gizlilik-politikasi.html
@@ -12,7 +12,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı Döviz Kuru - Gizlilik Politikası ve Kullanım Koşulları">
+    <meta name="description" content="Canlı Döviz Kuru sitesinin gizlilik politikası ve kullanım koşulları. Veri toplama, çerez kullanımı ve sorumluluk reddi hakkında bilgiler."> {/* Description güncellendi */}
     <meta name="robots" content="index, follow">
     <title>Gizlilik Politikası - Canlı Döviz Kuru</title>
     <link rel="icon" type="image/png" href="../favicon.png">
@@ -33,22 +33,25 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Ana Sayfa</a>
+                        <a class="nav-link" href="../index.html"><i class="bi bi-house-door"></i> Ana Sayfa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="doviz-cevirici.html">Döviz Çevirici</a>
+                        <a class="nav-link" href="doviz-cevirici.html"><i class="bi bi-calculator"></i> Döviz Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kripto-cevirici.html">Kripto Çevirici</a>
+                        <a class="nav-link" href="kripto-cevirici.html"><i class="bi bi-currency-bitcoin"></i> Kripto Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="canli-doviz.html">Canlı Döviz</a>
+                        <a class="nav-link" href="canli-doviz.html"><i class="bi bi-graph-up"></i> Canlı Döviz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kripto-piyasa.html">Kripto Piyasa</a>
+                        <a class="nav-link" href="kripto-piyasa.html"><i class="bi bi-coin"></i> Kripto Piyasa</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a> {/* Blog eklendi */}
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
+                        <a class="nav-link" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a>
                     </li>
                 </ul>
             </div>
@@ -59,49 +62,59 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <div class="card">
+                <div class="card shadow-sm"> {/* Gölge eklendi */}
                     <div class="card-body">
-                        <h1 class="card-title h3">Gizlilik Politikası ve Kullanım Koşulları</h1>
-                        
+                        <h1 class="card-title h3 mb-4"><i class="bi bi-shield-lock"></i> Gizlilik Politikası ve Kullanım Koşulları</h1> {/* İkon eklendi */}
+
                         <h2 class="h4 mt-4">1. Veri Toplama ve Kullanım</h2>
                         <p>Canlı Döviz Kuru olarak, hizmetlerimizi iyileştirmek ve kullanıcı deneyimini geliştirmek amacıyla bazı temel verileri toplamaktayız:</p>
                         <ul>
-                            <li>Google Analytics aracılığıyla toplanan anonim kullanım verileri</li>
-                            <li>Tema tercihi için kullanılan çerezler</li>
-                            <li>Standart sunucu logları (IP adresi, tarayıcı bilgisi)</li>
+                            <li>Google Analytics aracılığıyla toplanan anonim kullanım verileri (sayfa görüntülemeleri, sitede geçirilen süre vb.).</li>
+                            <li>Tema tercihi gibi arayüz ayarlarını kaydetmek için kullanılan çerezler (cookies).</li>
+                            <li>Web sunucumuzun standart işleyişi gereği tutulan log kayıtları (IP adresi, tarayıcı türü, ziyaret zamanı gibi teknik bilgiler). Bu loglar genellikle güvenlik ve hata ayıklama amacıyla kullanılır.</li>
                         </ul>
 
-                        <h2 class="h4 mt-4">2. Çerezler</h2>
-                        <p>Sitemiz, kullanıcı deneyimini iyileştirmek için minimum düzeyde çerez kullanmaktadır. Bu çerezler:</p>
+                        <h2 class="h4 mt-4">2. Çerezler (Cookies)</h2>
+                        <p>Sitemiz, kullanıcı deneyimini iyileştirmek ve temel işlevleri sağlamak için minimum düzeyde çerez kullanmaktadır. Bu çerezler:</p>
                         <ul>
-                            <li>Tema tercihlerinizi kaydetmek</li>
-                            <li>Google Analytics için gerekli temel işlevler</li>
+                            <li>Seçtiğiniz tema (açık/koyu mod) gibi tercihlerinizi hatırlamak için kullanılır.</li>
+                            <li>Google Analytics'in düzgün çalışması için gerekli olan anonim tanımlayıcıları içerir.</li>
+                        </ul>
+                        <p>Tarayıcı ayarlarınızdan çerezleri yönetebilir veya engelleyebilirsiniz, ancak bu durum sitenin bazı özelliklerinin çalışmamasına neden olabilir.</p>
+
+                        <h2 class="h4 mt-4">3. Üçüncü Taraf Hizmetler</h2>
+                        <p>Sitemiz, işlevsellik ve analiz amacıyla aşağıdaki üçüncü taraf hizmetlerini kullanmaktadır:</p>
+                        <ul>
+                            <li><strong>Google Analytics:</strong> Ziyaretçi istatistiklerini anonim olarak takip etmek için kullanılır. Google'ın gizlilik politikası için <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">buraya</a> bakabilirsiniz.</li>
+                            <li><strong>Google AdSense:</strong> Sitede reklam göstermek için kullanılır. Google, ilgi alanına dayalı reklamlar sunmak için çerezleri kullanabilir. Reklam ayarlarınızı Google üzerinden yönetebilirsiniz.</li>
+                            <li><strong>Exchangerate-API.com / CoinGecko API:</strong> Döviz ve kripto para verilerini sağlamak için kullanılır. Bu servislerin kendi gizlilik politikaları geçerlidir.</li>
+                             <li><strong>jsDelivr / Cloudflare vb. CDN'ler:</strong> Bootstrap, Marked.js gibi kütüphaneleri ve statik içerikleri hızlı sunmak için kullanılır.</li>
                         </ul>
 
-                        <h2 class="h4 mt-4">3. Google Analytics</h2>
-                        <p>Sitemiz, ziyaretçi istatistiklerini takip etmek için Google Analytics kullanmaktadır. Bu veriler anonimdir ve kişisel tanımlama için kullanılmaz.</p>
 
                         <h2 class="h4 mt-4">4. Kullanım Koşulları</h2>
-                        <p>Canlı Döviz Kuru'nu kullanarak aşağıdaki koşulları kabul etmiş olursunuz:</p>
+                        <p>Canlı Döviz Kuru (www.dovizkurucanli.com) web sitesini kullanarak aşağıdaki koşulları kabul etmiş sayılırsınız:</p>
                         <ul>
-                            <li>Sunulan bilgiler sadece bilgilendirme amaçlıdır</li>
-                            <li>Finansal kararlarınız için profesyonel danışmanlık almanız önerilir</li>
-                            <li>Sitedeki verilerin doğruluğu için çaba gösterilse de, garanti verilmez</li>
+                            <li>Sitede sunulan tüm bilgiler (döviz kurları, kripto fiyatları, blog yazıları vb.) yalnızca genel bilgilendirme amaçlıdır.</li>
+                            <li>Bu bilgiler finansal tavsiye, yatırım tavsiyesi veya herhangi bir alım/satım önerisi niteliği taşımaz.</li>
+                            <li>Finansal kararlarınızı vermeden önce mutlaka yetkili bir finans uzmanına danışmanız önerilir.</li>
+                            <li>Sitedeki verilerin doğruluğu ve güncelliği için azami çaba gösterilmekle birlikte, verilerin doğruluğu, eksiksizliği veya zamanlılığı konusunda herhangi bir garanti verilmez. Veri sağlayıcılarından kaynaklanan gecikmeler veya hatalar olabilir.</li>
+                            <li>Siteyi kullanmanızdan veya sitedeki bilgilere dayanarak aldığınız kararlardan kaynaklanabilecek doğrudan veya dolaylı hiçbir zarardan Canlı Döviz Kuru sorumlu tutulamaz.</li>
                         </ul>
 
                         <h2 class="h4 mt-4">5. Sorumluluk Reddi</h2>
                         <p>Canlı Döviz Kuru:</p>
                         <ul>
-                            <li>Sunulan bilgilerin kullanımından doğacak sonuçlardan sorumlu değildir</li>
-                            <li>Verilen kararların sorumluluğu tamamen kullanıcıya aittir</li>
-                            <li>Sitede yer alan bilgiler yatırım tavsiyesi değildir</li>
+                            <li>Sunulan bilgilerin kullanımından doğacak maddi veya manevi sonuçlardan sorumlu değildir.</li>
+                            <li>Kullanıcıların sitedeki bilgilere dayanarak yaptığı işlemlerin ve aldığı kararların tüm sorumluluğu tamamen kullanıcıya aittir.</li>
+                            <li>Sitede yer alan hiçbir içerik, belirli bir finansal ürün veya hizmet için tavsiye niteliği taşımaz.</li>
                         </ul>
 
-                        <div class="alert alert-info mt-4">
-                            <p class="mb-0">Bu politika ve koşullar, önceden haber verilmeksizin güncellenebilir. Değişiklikler bu sayfada yayınlanacaktır.</p>
+                        <div class="alert alert-warning mt-4"> {/* Renk değiştirildi */}
+                            <p class="mb-0"><i class="bi bi-exclamation-triangle-fill"></i> Bu gizlilik politikası ve kullanım koşulları, önceden haber verilmeksizin güncellenebilir. Yapılan değişiklikler bu sayfada yayınlandığı andan itibaren geçerli olacaktır. Siteyi kullanmaya devam etmeniz, güncellenmiş koşulları kabul ettiğiniz anlamına gelir.</p>
                         </div>
 
-                        <p class="text-muted mt-4">Son güncelleme: Mart 2024</p>
+                        <p class="text-muted mt-4">Son güncelleme: 6 Nisan 2025</p> {/* Tarih güncellendi */}
                     </div>
                 </div>
             </div>
@@ -116,17 +129,18 @@
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3"> {/* Genişlik ayarlandı */}
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
                         <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
                         <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
                         <li><a href="canli-doviz.html">Canlı Döviz</a></li>
                         <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
+                        <li><a href="blog.html">Blog</a></li> {/* Blog eklendi */}
                     </ul>
                 </div>
-                <div class="col-md-2">
-                    <h5>İletişim</h5>
+                <div class="col-md-3"> {/* Genişlik ayarlandı */}
+                    <h5>Diğer</h5>
                     <ul class="list-unstyled">
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
                         <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li>
@@ -140,10 +154,12 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../script.js"></script>
+    <!-- Tema Değiştirme Butonu -->
     <button class="theme-toggle" id="themeToggle">
         <i class="bi bi-moon-stars"></i>
     </button>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../script.js"></script>
 </body>
-</html> 
+</html>
