--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -12,13 +12,13 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı Döviz Kuru - Anlık döviz kurları, dolar kaç tl, euro kaç tl, güncel döviz çevirici ve kripto para bilgileri.">
-    <meta name="keywords" content="canlı döviz kuru, anlık döviz kuru, dolar kaç tl, euro kaç tl, bitcoin kaç tl, kripto para piyasa">
+    <meta name="description" content="Canlı Döviz Kuru hakkında bilgi edinin. Anlık döviz kurları, kripto para fiyatları ve finansal araçlar sunan platformumuzun misyonu ve hizmetleri."> {/* Description güncellendi */}
+    <meta name="keywords" content="canlı döviz kuru, hakkımızda, finans platformu, döviz bilgileri, kripto bilgileri"> {/* Keywords güncellendi */}
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
     <title>Hakkımızda - Canlı Döviz Kuru | Anlık Döviz ve Kripto Para Bilgileri</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>$</text></svg>">
+    <link rel="icon" type="image/png" href="../favicon.png"> {/* Favicon düzeltildi */}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
@@ -36,19 +36,25 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Ana Sayfa</a>
+                        <a class="nav-link" href="../index.html"><i class="bi bi-house-door"></i> Ana Sayfa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="canli-doviz.html">Canlı Döviz</a>
+                        <a class="nav-link" href="doviz-cevirici.html"><i class="bi bi-calculator"></i> Döviz Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="doviz-cevirici.html">Döviz Çevirici</a>
+                        <a class="nav-link" href="kripto-cevirici.html"><i class="bi bi-currency-bitcoin"></i> Kripto Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kripto-cevirici.html">Kripto Çevirici</a>
+                        <a class="nav-link" href="canli-doviz.html"><i class="bi bi-graph-up"></i> Canlı Döviz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kripto-piyasa.html">Kripto Piyasa</a>
+                        <a class="nav-link" href="kripto-piyasa.html"><i class="bi bi-coin"></i> Kripto Piyasa</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a> {/* Blog eklendi */}
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a> {/* Active sınıfı eklendi */}
                     </li>
                 </ul>
             </div>
@@ -59,82 +65,80 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <div class="card">
-                    <div class="card-header">
-                        <h1 class="h3 mb-0">Canlı Döviz Kuru Hakkında</h1>
+                <div class="card shadow-sm"> {/* Gölge eklendi */}
+                    <div class="card-header bg-primary text-white"> {/* Renk değiştirildi */}
+                        <h1 class="h3 mb-0"><i class="bi bi-info-circle-fill"></i> Canlı Döviz Kuru Hakkında</h1> {/* İkon eklendi */}
                     </div>
                     <div class="card-body">
-                        <h2 class="h4 mb-4">Canlı Döviz ve Kripto Para Bilgileri</h2>
+                        <h2 class="h4 mb-4">Misyonumuz: Anlık ve Güvenilir Finans Bilgisi</h2>
                         <p class="lead">
-                            Canlı Döviz Kuru, güncel döviz kurları ve kripto para fiyatlarını anlık olarak takip etmenizi sağlayan, kullanıcı dostu bir finans bilgi platformudur.
+                            Canlı Döviz Kuru (www.dovizkurucanli.com), güncel döviz kurları ve kripto para fiyatlarını anlık olarak takip etmenizi sağlayan, kullanıcı dostu bir finans bilgi platformudur. Amacımız, finansal okuryazarlığı artırmak ve kullanıcılarımıza doğru, hızlı ve güvenilir bilgi sunmaktır.
                         </p>
 
-                        <h3 class="h5 mt-4">Sunduğumuz Hizmetler</h3>
+                        <h3 class="h5 mt-4">Sunduğumuz Başlıca Hizmetler</h3>
                         <ul class="list-group list-group-flush mb-4">
                             <li class="list-group-item">
                                 <i class="bi bi-check-circle-fill text-success me-2"></i>
-                                <strong>Canlı Döviz Kurları:</strong> Dolar kaç TL, Euro kaç TL gibi güncel döviz kurlarını anlık olarak takip edin
+                                <strong>Canlı Döviz Kurları:</strong> Dolar kaç TL, Euro kaç TL gibi en çok merak edilen güncel döviz kurlarını ve diğer para birimlerinin anlık değerlerini takip edin.
                             </li>
                             <li class="list-group-item">
                                 <i class="bi bi-check-circle-fill text-success me-2"></i>
-                                <strong>Kripto Para Piyasası:</strong> Bitcoin, Ethereum ve diğer kripto para birimlerinin güncel fiyatlarını görüntüleyin
+                                <strong>Kripto Para Piyasası:</strong> Bitcoin (BTC), Ethereum (ETH), Ripple (XRP) ve diğer popüler kripto para birimlerinin güncel fiyatlarını ve piyasa verilerini görüntüleyin.
                             </li>
                             <li class="list-group-item">
                                 <i class="bi bi-check-circle-fill text-success me-2"></i>
-                                <strong>Döviz Çevirici:</strong> 150'den fazla para birimi arasında anlık döviz çevirimi yapın
+                                <strong>Döviz Çevirici:</strong> 150'den fazla para birimi arasında anlık döviz çevirimi yapın. Seyahatleriniz veya uluslararası alışverişleriniz için pratik bir araç.
                             </li>
                             <li class="list-group-item">
                                 <i class="bi bi-check-circle-fill text-success me-2"></i>
-                                <strong>Kripto Para Çevirici:</strong> Kripto para birimleri arasında kolayca dönüşüm yapın
+                                <strong>Kripto Para Çevirici:</strong> Farklı kripto para birimleri arasında veya kripto paralar ile geleneksel para birimleri arasında kolayca dönüşüm yapın.
                             </li>
                             <li class="list-group-item">
                                 <i class="bi bi-check-circle-fill text-success me-2"></i>
-                                <strong>Piyasa Analizi:</strong> Döviz ve kripto para piyasalarındaki günlük değişimleri takip edin
+                                <strong>Finans Blogu:</strong> Döviz, kripto paralar, ekonomi ve yatırım konularında bilgilendirici yazılar, analizler ve ipuçları.
                             </li>
                         </ul>
 
-                        <h3 class="h5 mt-4">Neden Bizi Tercih Etmelisiniz?</h3>
+                        <h3 class="h5 mt-4">Neden Canlı Döviz Kuru?</h3>
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <div class="card h-100">
+                                <div class="card h-100 border-warning">
                                     <div class="card-body">
-                                        <h4 class="h6"><i class="bi bi-lightning-charge-fill text-warning me-2"></i>Anlık Güncelleme</h4>
-                                        <p class="mb-0">Döviz kurları ve kripto para fiyatları her dakika güncellenir</p>
+                                        <h4 class="h6"><i class="bi bi-lightning-charge-fill text-warning me-2"></i>Anlık Veri</h4>
+                                        <p class="mb-0 small">Döviz kurları ve kripto para fiyatları sürekli güncellenerek en taze bilgiyi sunar.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="card h-100">
+                                <div class="card h-100 border-success">
                                     <div class="card-body">
-                                        <h4 class="h6"><i class="bi bi-shield-check text-success me-2"></i>Güvenilir Veri</h4>
-                                        <p class="mb-0">Resmi kaynaklardan alınan güvenilir finansal veriler</p>
+                                        <h4 class="h6"><i class="bi bi-shield-check text-success me-2"></i>Güvenilir Kaynaklar</h4>
+                                        <p class="mb-0 small">Verilerimiz, güvenilir ve tanınmış finansal veri sağlayıcılarından alınmaktadır.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="card h-100">
+                                <div class="card h-100 border-primary">
                                     <div class="card-body">
-                                        <h4 class="h6"><i class="bi bi-graph-up text-primary me-2"></i>Detaylı Analiz</h4>
-                                        <p class="mb-0">Piyasa trendleri ve değişim oranları hakkında detaylı bilgi</p>
+                                        <h4 class="h6"><i class="bi bi-display text-primary me-2"></i>Kullanıcı Dostu Arayüz</h4>
+                                        <p class="mb-0 small">Aradığınız bilgiye kolayca ulaşmanızı sağlayan basit ve anlaşılır tasarım.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="card h-100">
+                                <div class="card h-100 border-info">
                                     <div class="card-body">
                                         <h4 class="h6"><i class="bi bi-phone text-info me-2"></i>Mobil Uyumlu</h4>
-                                        <p class="mb-0">Tüm cihazlarda sorunsuz çalışan responsive tasarım</p>
+                                        <p class="mb-0 small">Telefonunuzdan veya tabletinizden de tüm özelliklere rahatça erişin.</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="alert alert-info mt-4">
-                            <h4 class="h6 mb-3"><i class="bi bi-info-circle-fill me-2"></i>Güncel Finansal Bilgiler</h4>
+                        <div class="alert alert-light mt-4 border"> {/* Stil değiştirildi */}
+                            <h4 class="h6 mb-3"><i class="bi bi-bullseye me-2"></i>Vizyonumuz</h4>
                             <p class="mb-0">
-                                Canlı Döviz Kuru olarak, dolar kaç TL, bitcoin kaç TL gibi güncel finansal bilgileri 
-                                anlık olarak sunuyor, döviz ve kripto para piyasalarındaki değişimleri takip ediyoruz. 
-                                Kullanıcılarımıza güvenilir ve kullanışlı finansal araçlar sunmak için sürekli kendimizi geliştiriyoruz.
+                                Canlı Döviz Kuru olarak vizyonumuz, Türkiye'deki herkes için finansal bilgilere erişimi kolaylaştırmak ve finansal okuryazarlığı desteklemektir. Güncel dolar kuru, euro kuru gibi temel bilgilerin yanı sıra, daha karmaşık finansal araçlar ve piyasalar hakkında da anlaşılır içerikler sunarak kullanıcılarımızın bilinçli kararlar almasına yardımcı olmayı hedefliyoruz.
                             </p>
                         </div>
                     </div>
@@ -150,20 +154,41 @@
                 <div class="col-md-6">
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
+                    {/* İletişim bilgisi buraya eklenebilir */}
+                    {/* <p><i class="bi bi-envelope"></i> info@candovizkuru.com</p> */}
                 </div>
-                <div class="col-md-6 text-md-end">
-                    <h5>İletişim</h5>
-                    <p>Email: info@candovizkuru.com</p>
+                <div class="col-md-3"> {/* Genişlik ayarlandı */}
+                    <h5>Hızlı Bağlantılar</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
+                        <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
+                        <li><a href="canli-doviz.html">Canlı Döviz</a></li>
+                        <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                    </ul>
                 </div>
+                <div class="col-md-3"> {/* Genişlik ayarlandı */}
+                    <h5>Diğer</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                        <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="mt-4">
+            <div class="text-center">
+                <p class="mb-0">&copy; 2025 Canlı Döviz Kuru Projesi. İrony Agency Tüm hakları saklıdır.</p>
             </div>
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../script.js"></script>
+    <!-- Tema Değiştirme Butonu -->
     <button class="theme-toggle" id="themeToggle">
         <i class="bi bi-moon-stars"></i>
     </button>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    {/* Chart.js kaldırıldı */}
+    <script src="../script.js"></script>
 </body>
-</html> 
+</html>
