--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="canlı döviz kuru, anlık döviz kuru, dolar kaç tl, euro kaç tl, bitcoin kaç tl, kripto para piyasa">
     <meta name="author" content="Finans Platformu">
     <meta name="robots" content="index, follow">
-    
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://candovizkuru.com/">
@@ -33,7 +33,7 @@
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://candovizkuru.com/">
-    
+
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
@@ -80,6 +80,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="pages/kripto-piyasa.html">
                             <i class="bi bi-coin"></i> Kripto Piyasa
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/blog.html">
+                            <i class="bi bi-pencil-square"></i> Blog
                         </a>
                     </li>
                     <li class="nav-item">
@@ -213,6 +218,7 @@
                         <li><a href="pages/kripto-cevirici.html">Kripto Çevirici</a></li>
                         <li><a href="pages/canli-doviz.html">Canlı Döviz</a></li>
                         <li><a href="pages/kripto-piyasa.html">Kripto Piyasa</a></li>
+                        <li><a href="pages/blog.html">Blog</a></li> {/* Blog bağlantısı eklendi */}
                     </ul>
                 </div>
                 <div class="col-md-2">
@@ -238,4 +244,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
