--- a/pages/canli-doviz.html
+++ b/pages/canli-doviz.html
@@ -18,7 +18,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
     <title>Canlı Döviz Kurları - Canlı Döviz Kuru | Anlık Döviz Bilgileri</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>$</text></svg>">
+    <link rel="icon" type="image/png" href="../favicon.png"> {/* Favicon düzeltildi */}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
@@ -34,27 +34,27 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto"> {/* ms-auto eklendi */}
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Ana Sayfa</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                            Araçlar
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="doviz-cevirici.html">Döviz Çevirici</a></li>
-                            <li><a class="dropdown-item" href="kripto-cevirici.html">Kripto Çevirici</a></li>
-                        </ul>
+                        <a class="nav-link" href="../index.html"><i class="bi bi-house-door"></i> Ana Sayfa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="canli-doviz.html">Canlı Döviz</a>
+                        <a class="nav-link" href="doviz-cevirici.html"><i class="bi bi-calculator"></i> Döviz Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kripto-piyasa.html">Kripto Piyasa</a>
+                        <a class="nav-link" href="kripto-cevirici.html"><i class="bi bi-currency-bitcoin"></i> Kripto Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
+                        <a class="nav-link active" href="canli-doviz.html"><i class="bi bi-graph-up"></i> Canlı Döviz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kripto-piyasa.html"><i class="bi bi-coin"></i> Kripto Piyasa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a> {/* Blog eklendi */}
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a>
                     </li>
                 </ul>
             </div>
@@ -84,6 +84,7 @@
                                 </tbody>
                             </table>
                         </div>
+                        <small id="lastUpdate" class="text-muted">Son Güncelleme: ...</small> {/* lastUpdate eklendi */}
                     </div>
                 </div>
 
@@ -107,25 +108,8 @@
                     <div class="card-body">
                         <h3 class="card-title">Döviz Çevirici</h3>
                         <p class="card-text">Hızlı ve kolay döviz çevirimi yapın. Tüm para birimleri arasında anlık dönüşüm yapabilirsiniz.</p>
-                        <div class="mb-3">
-                            <label for="amount" class="form-label">Miktar</label>
-                            <input type="number" class="form-control" id="amount" value="1">
-                        </div>
-                        <div class="mb-3">
-                            <label for="fromCurrency" class="form-label">Dönüştürülecek Para Birimi</label>
-                            <select class="form-select" id="fromCurrency">
-                                <!-- Para birimleri buraya gelecek -->
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label for="toCurrency" class="form-label">Hedef Para Birimi</label>
-                            <select class="form-select" id="toCurrency">
-                                <!-- Para birimleri buraya gelecek -->
-                            </select>
-                        </div>
-                        <button class="btn btn-primary w-100" onclick="convertCurrency()">Çevir</button>
-                        <div class="mt-3">
-                            <h4>Sonuç: <span id="result">0.00</span></h4>
+                        <div class="d-grid"> {/* Buton için d-grid kullanıldı */}
+                             <a href="doviz-cevirici.html" class="btn btn-primary">Döviz Çeviriciye Git</a>
                         </div>
                     </div>
                 </div>
@@ -154,19 +138,21 @@
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3"> {/* Sütun genişliği ayarlandı */}
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
                         <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
                         <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
                         <li><a href="canli-doviz.html">Canlı Döviz</a></li>
                         <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
+                        <li><a href="blog.html">Blog</a></li> {/* Blog eklendi */}
                     </ul>
                 </div>
-                <div class="col-md-2">
-                    <h5>İletişim</h5>
+                <div class="col-md-3"> {/* Sütun genişliği ayarlandı */}
+                    <h5>Diğer</h5> {/* Başlık Diğer olarak değiştirildi */}
                     <ul class="list-unstyled">
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                        <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li> {/* Gizlilik Politikası eklendi */}
                     </ul>
                 </div>
             </div>
@@ -177,11 +163,15 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../script.js"></script>
+    <!-- Tema Değiştirme Butonu -->
     <button class="theme-toggle" id="themeToggle">
         <i class="bi bi-moon-stars"></i>
     </button>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    {/* Chart.js kaldırıldı, bu sayfada kullanılmıyor gibi */}
+    <script src="../script.js"></script>
+    {/* Bu sayfaya özel scriptler gerekirse buraya eklenebilir */}
+
 </body>
-</html> 
+</html>
