--- a/pages/doviz-cevirici.html
+++ b/pages/doviz-cevirici.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Döviz Çevirici - Finans Platformu</title>
+    <title>Döviz Çevirici - Canlı Döviz Kuru</title>
+    <meta name="description" content="Anlık döviz kurları ile 150'den fazla para birimi arasında hızlı ve kolay çeviri yapın. Güncel dolar, euro ve diğer kurları kullanarak hesaplama yapın.">
+    <meta name="keywords" content="döviz çevirici, kur çevirici, para çevirici, anlık kur, dolar çevir, euro çevir, canlı döviz kuru">
+    <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
@@ -12,32 +15,34 @@
     <!-- Navigasyon -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="../index.html"><i class="bi bi-graph-up"></i> Finans Platformu</a>
+            <a class="navbar-brand" href="../index.html">
+                <i class="bi bi-currency-exchange me-2"></i>Canlı Döviz Kuru
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Ana Sayfa</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                            Araçlar
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item active" href="doviz-cevirici.html">Döviz Çevirici</a></li>
-                            <li><a class="dropdown-item" href="kripto-cevirici.html">Kripto Çevirici</a></li>
-                        </ul>
+                        <a class="nav-link" href="../index.html"><i class="bi bi-house-door"></i> Ana Sayfa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="canli-doviz.html">Canlı Döviz</a>
+                        <a class="nav-link active" href="doviz-cevirici.html"><i class="bi bi-calculator"></i> Döviz Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kripto-piyasa.html">Kripto Piyasa</a>
+                        <a class="nav-link" href="kripto-cevirici.html"><i class="bi bi-currency-bitcoin"></i> Kripto Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
+                        <a class="nav-link" href="canli-doviz.html"><i class="bi bi-graph-up"></i> Canlı Döviz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kripto-piyasa.html"><i class="bi bi-coin"></i> Kripto Piyasa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a>
                     </li>
                 </ul>
             </div>
@@ -49,60 +54,67 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <!-- Döviz Çevirici Kartı -->
-                <div class="card">
-                    <div class="card-header bg-success">
-                        <h4 class="mb-0 text-white"><i class="bi bi-calculator"></i> Döviz Çevirici</h4>
+                <div class="card shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h1 class="h4 mb-0"><i class="bi bi-calculator"></i> Döviz Çevirici</h1>
                     </div>
                     <div class="card-body">
-                        <div class="row g-3">
-                            <div class="col-md-6">
+                        <p class="card-text mb-4">Anlık kurları kullanarak para birimleri arasında kolayca çeviri yapın.</p>
+                        <div class="row g-3 align-items-center">
+                            <div class="col-md-5">
                                 <div class="form-floating">
-                                    <input type="number" class="form-control" id="amount" value="1" min="0" step="0.01">
+                                    <input type="number" class="form-control" id="amount" value="1" min="0" step="any">
                                     <label for="amount">Miktar</label>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-5">
                                 <div class="form-floating">
                                     <select class="form-select" id="fromCurrency">
                                         <!-- JavaScript ile doldurulacak -->
+                                        <option>Yükleniyor...</option>
                                     </select>
                                     <label for="fromCurrency">Kaynak Para Birimi</label>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-2 text-center d-none d-md-block">
+                                <i class="bi bi-arrow-left-right fs-3 text-secondary"></i>
+                            </div>
+                             <div class="col-12 d-md-none text-center">
+                                <i class="bi bi-arrow-down-up fs-3 text-secondary my-2"></i>
+                            </div>
+                            <div class="col-md-5">
                                 <div class="form-floating">
                                     <select class="form-select" id="toCurrency">
                                         <!-- JavaScript ile doldurulacak -->
+                                         <option>Yükleniyor...</option>
                                     </select>
                                     <label for="toCurrency">Hedef Para Birimi</label>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <button class="btn btn-success w-100 h-100" onclick="convertCurrency()">
-                                    <i class="bi bi-arrow-left-right"></i> Çevir
-                                </button>
-                            </div>
+                             <div class="col-md-5">
+                             </div>
+                             <div class="col-md-2 d-none d-md-block">
+                             </div>
+
                         </div>
 
                         <div class="result-box mt-4 text-center">
-                            <div class="alert alert-info" role="alert">
+                            <div class="alert alert-success" role="alert">
                                 <h5 class="alert-heading mb-0">Dönüşüm Sonucu</h5>
-                                <div id="result" class="display-6 mt-3"></div>
+                                <div id="result" class="display-6 mt-2 fw-bold">--</div>
                             </div>
                         </div>
+                        <p class="text-center text-muted mt-2"><small id="lastUpdate">Kurlar yükleniyor...</small></p>
 
-                        <!-- Son Güncellemeler -->
-                        <div class="mt-4">
-                            <div class="d-flex justify-content-between align-items-center">
-                                <h5 class="mb-3"><i class="bi bi-clock-history"></i> Son Güncellemeler</h5>
-                                <small id="lastUpdate" class="text-muted"></small>
-                            </div>
+                        {/* Popüler Kurlar Tablosu (Opsiyonel, script.js'den çağrılabilir) */}
+                        <div class="mt-5 d-none">
+                            <h5 class="mb-3"><i class="bi bi-star-fill text-warning"></i> Popüler Kurlar (TRY Bazlı)</h5>
                             <div class="table-responsive">
-                                <table class="table table-hover">
+                                <table class="table table-sm table-hover">
                                     <thead>
                                         <tr>
                                             <th>Para Birimi</th>
-                                            <th>Güncel Kur</th>
+                                            <th>Kur</th>
                                             <th>Değişim</th>
                                         </tr>
                                     </thead>
@@ -116,36 +128,6 @@
                 </div>
             </div>
 
-            <!-- Bilgi Kartı -->
-            <div class="col-lg-4">
-                <div class="card">
-                    <div class="card-header bg-info text-white">
-                        <h5 class="mb-0"><i class="bi bi-info-circle"></i> Bilgi</h5>
-                    </div>
-                    <div class="card-body">
-                        <p>Bu döviz çevirici aracı ile:</p>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <i class="bi bi-check-circle text-success"></i>
-                                Anlık döviz kurları üzerinden hesaplama yapabilirsiniz
-                            </li>
-                            <li class="list-group-item">
-                                <i class="bi bi-check-circle text-success"></i>
-                                150'den fazla para birimi arasında dönüşüm yapabilirsiniz
-                            </li>
-                            <li class="list-group-item">
-                                <i class="bi bi-check-circle text-success"></i>
-                                Güncel kurları takip edebilirsiniz
-                            </li>
-                        </ul>
-                        <div class="mt-3">
-                            <a href="canli-doviz.html" class="btn btn-outline-primary w-100">
-                                <i class="bi bi-currency-exchange"></i> Canlı Kurları Görüntüle
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -157,19 +139,21 @@
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
                         <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
                         <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
                         <li><a href="canli-doviz.html">Canlı Döviz</a></li>
                         <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
-                <div class="col-md-2">
-                    <h5>İletişim</h5>
+                <div class="col-md-3">
+                    <h5>Diğer</h5>
                     <ul class="list-unstyled">
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                        <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li>
                     </ul>
                 </div>
             </div>
@@ -180,7 +164,31 @@
         </div>
     </footer>
 
+     <!-- Tema Değiştirme Butonu -->
+    <button class="theme-toggle" id="themeToggle">
+        <i class="bi bi-moon-stars"></i>
+    </button>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../script.js"></script>
+    <script>
+        // Sayfa yüklendiğinde para birimi seçeneklerini ve gerekirse popüler kurları yükle
+        document.addEventListener('DOMContentLoaded', () => {
+            if (typeof loadCurrencyOptions === 'function') {
+                loadCurrencyOptions(); // script.js içindeki fonksiyonu çağır
+            }
+             // İsteğe bağlı: Popüler kurları da bu sayfada göstermek isterseniz
+            // if (typeof loadPopularRates === 'function') {
+            //     loadPopularRates();
+            //     document.querySelector('.mt-5.d-none')?.classList.remove('d-none'); // Tabloyu görünür yap
+            // }
+
+            // İlk çeviriyi yap (varsayılan değerlerle)
+             if (typeof convertCurrency === 'function') {
+                 // Seçeneklerin yüklenmesini beklemek için küçük bir gecikme
+                 setTimeout(convertCurrency, 500);
+             }
+        });
+    </script>
 </body>
-</html> 
+</html>
