--- a/pages/kripto-cevirici.html
+++ b/pages/kripto-cevirici.html
@@ -12,12 +12,13 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı Döviz Kuru - Anlık döviz kurları, dolar kaç tl, euro kaç tl, güncel döviz çevirici ve kripto para bilgileri.">
-    <meta name="keywords" content="canlı döviz kuru, anlık döviz kuru, dolar kaç tl, euro kaç tl, bitcoin kaç tl, kripto para piyasa">
+    <meta name="description" content="Anlık kripto para fiyatları ile Bitcoin, Ethereum ve 100'den fazla altcoin arasında çeviri yapın. Güncel BTC, ETH ve diğer kripto değerlerini kullanarak hesaplama yapın."> {/* Description güncellendi */}
+    <meta name="keywords" content="kripto çevirici, kripto para çevirici, bitcoin çevirici, ethereum çevirici, altcoin çevirici, anlık kripto fiyatları, canlı döviz kuru"> {/* Keywords güncellendi */}
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
     <title>Kripto Para Çevirici - Canlı Döviz Kuru | Anlık Kripto Para Bilgileri</title>
+    <link rel="icon" type="image/png" href="../favicon.png"> {/* Favicon eklendi */}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
@@ -33,27 +34,27 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                 <ul class="navbar-nav ms-auto"> {/* ms-auto eklendi */}
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Ana Sayfa</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                            Araçlar
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="doviz-cevirici.html">Döviz Çevirici</a></li>
-                            <li><a class="dropdown-item active" href="kripto-cevirici.html">Kripto Çevirici</a></li>
-                        </ul>
+                        <a class="nav-link" href="../index.html"><i class="bi bi-house-door"></i> Ana Sayfa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="canli-doviz.html">Canlı Döviz</a>
+                        <a class="nav-link" href="doviz-cevirici.html"><i class="bi bi-calculator"></i> Döviz Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kripto-piyasa.html">Kripto Piyasa</a>
+                        <a class="nav-link active" href="kripto-cevirici.html"><i class="bi bi-currency-bitcoin"></i> Kripto Çevirici</a> {/* Active sınıfı düzeltildi, ikon eklendi */}
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
+                        <a class="nav-link" href="canli-doviz.html"><i class="bi bi-graph-up"></i> Canlı Döviz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kripto-piyasa.html"><i class="bi bi-coin"></i> Kripto Piyasa</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a> {/* Blog eklendi */}
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a>
                     </li>
                 </ul>
             </div>
@@ -65,60 +66,67 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <!-- Kripto Çevirici Kartı -->
-                <div class="card">
-                    <div class="card-header bg-info">
-                        <h4 class="mb-0 text-white"><i class="bi bi-currency-bitcoin"></i> Kripto Para Çevirici</h4>
+                <div class="card shadow-sm"> {/* Gölge eklendi */}
+                    <div class="card-header bg-warning text-dark"> {/* Renk değiştirildi */}
+                        <h1 class="h4 mb-0"><i class="bi bi-currency-bitcoin"></i> Kripto Para Çevirici</h1> {/* Başlık seviyesi değiştirildi */}
                     </div>
                     <div class="card-body">
-                        <div class="row g-3">
-                            <div class="col-md-6">
+                         <p class="card-text mb-4">Anlık fiyatları kullanarak kripto paralar arasında veya kripto paralar ile fiat paralar arasında çeviri yapın.</p> {/* Açıklama eklendi */}
+                        <div class="row g-3 align-items-center"> {/* Hizalama eklendi */}
+                            <div class="col-md-5"> {/* Genişlik ayarlandı */}
                                 <div class="form-floating">
-                                    <input type="number" class="form-control" id="cryptoAmount" value="1" min="0" step="0.000001">
-                                    <label for="cryptoAmount">Miktar</label>
+                                    <input type="number" class="form-control" id="amount" value="1" min="0" step="any"> {/* ID amount olarak değiştirildi, step="any" */}
+                                    <label for="amount">Miktar</label>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-5"> {/* Genişlik ayarlandı */}
                                 <div class="form-floating">
                                     <select class="form-select" id="fromCrypto">
                                         <!-- JavaScript ile doldurulacak -->
+                                        <option>Yükleniyor...</option>
                                     </select>
                                     <label for="fromCrypto">Kaynak Kripto Para</label>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                             <div class="col-md-2 text-center d-none d-md-block"> {/* Sadece masaüstünde görünen ikon */}
+                                <i class="bi bi-arrow-left-right fs-3 text-secondary"></i>
+                            </div>
+                             <div class="col-12 d-md-none text-center"> {/* Sadece mobilde görünen ikon */}
+                                <i class="bi bi-arrow-down-up fs-3 text-secondary my-2"></i>
+                            </div>
+                            <div class="col-md-5"> {/* Genişlik ayarlandı */}
                                 <div class="form-floating">
-                                    <select class="form-select" id="toCrypto">
+                                    <select class="form-select" id="toCurrency"> {/* ID toCurrency olarak değiştirildi */}
                                         <!-- JavaScript ile doldurulacak -->
+                                        <option>Yükleniyor...</option>
                                     </select>
-                                    <label for="toCrypto">Hedef Para Birimi</label>
+                                    <label for="toCurrency">Hedef Para Birimi</label> {/* Label güncellendi */}
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <button class="btn btn-info w-100 h-100 text-white" onclick="convertCrypto()">
-                                    <i class="bi bi-arrow-left-right"></i> Çevir
-                                </button>
-                            </div>
+                             <div class="col-md-5"> {/* Boşluk */}
+                             </div>
+                             <div class="col-md-2 d-none d-md-block"> {/* Boşluk */}
+                             </div>
                         </div>
 
                         <div class="result-box mt-4 text-center">
-                            <div class="alert alert-info" role="alert">
+                            <div class="alert alert-warning" role="alert"> {/* Renk değiştirildi */}
                                 <h5 class="alert-heading mb-0">Dönüşüm Sonucu</h5>
-                                <div id="cryptoResult" class="display-6 mt-3"></div>
+                                <div id="result" class="display-6 mt-2 fw-bold">--</div> {/* ID result olarak değiştirildi, stil eklendi */}
                             </div>
                         </div>
+                         <p class="text-center text-muted mt-2"><small id="cryptoLastUpdate">Kurlar yükleniyor...</small></p> {/* Son güncelleme yeri */}
 
-                        <!-- Popüler Kripto Paralar -->
-                        <div class="mt-4">
-                            <div class="d-flex justify-content-between align-items-center">
-                                <h5 class="mb-3"><i class="bi bi-star"></i> Popüler Kripto Paralar</h5>
-                                <small id="cryptoLastUpdate" class="text-muted"></small>
-                            </div>
+
+                        {/* Popüler Kripto Paralar Tablosu (Opsiyonel) */}
+                        <div class="mt-5 d-none"> {/* Başlangıçta gizli */}
+                             <h5 class="mb-3"><i class="bi bi-graph-up text-primary"></i> Popüler Kripto Paralar (USD Bazlı)</h5>
                             <div class="table-responsive">
-                                <table class="table table-hover">
+                                <table class="table table-sm table-hover">
                                     <thead>
                                         <tr>
                                             <th>Kripto Para</th>
-                                            <th>Fiyat (USD)</th>
+                                            <th>Fiyat</th>
                                             <th>24s Değişim</th>
                                         </tr>
                                     </thead>
@@ -132,60 +140,8 @@
                 </div>
             </div>
 
-            <!-- Bilgi Kartı -->
-            <div class="col-lg-4">
-                <div class="card">
-                    <div class="card-header bg-info text-white">
-                        <h5 class="mb-0"><i class="bi bi-info-circle"></i> Bilgi</h5>
-                    </div>
-                    <div class="card-body">
-                        <p>Bu kripto para çevirici aracı ile:</p>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <i class="bi bi-check-circle text-success"></i>
-                                Anlık kripto para fiyatları üzerinden hesaplama yapabilirsiniz
-                            </li>
-                            <li class="list-group-item">
-                                <i class="bi bi-check-circle text-success"></i>
-                                100'den fazla kripto para arasında dönüşüm yapabilirsiniz
-                            </li>
-                            <li class="list-group-item">
-                                <i class="bi bi-check-circle text-success"></i>
-                                Piyasa değerlerini takip edebilirsiniz
-                            </li>
-                        </ul>
-                        <div class="mt-3">
-                            <a href="kripto-piyasa.html" class="btn btn-outline-info w-100">
-                                <i class="bi bi-graph-up"></i> Kripto Piyasasını Görüntüle
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Market Trend Kartı -->
-                <div class="card mt-3">
-                    <div class="card-header bg-primary text-white">
-                        <h5 class="mb-0"><i class="bi bi-graph-up-arrow"></i> Market Trend</h5>
-                    </div>
-                    <div class="card-body">
-                        <div id="marketTrend">
-                            <!-- JavaScript ile doldurulacak -->
-                            <div class="d-flex justify-content-between mb-2">
-                                <span>Toplam Market Değeri:</span>
-                                <span id="totalMarketCap" class="fw-bold"></span>
-                            </div>
-                            <div class="d-flex justify-content-between mb-2">
-                                <span>24s Toplam Hacim:</span>
-                                <span id="total24hVolume" class="fw-bold"></span>
-                            </div>
-                            <div class="d-flex justify-content-between">
-                                <span>BTC Dominansı:</span>
-                                <span id="btcDominance" class="fw-bold"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+             <!-- Bilgi Kartı kaldırıldı -->
+             <!-- Market Trend Kartı kaldırıldı -->
         </div>
     </div>
 
@@ -197,19 +153,21 @@
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                <div class="col-md-4">
+                 <div class="col-md-3"> {/* Genişlik ayarlandı */}
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
                         <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
                         <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
                         <li><a href="canli-doviz.html">Canlı Döviz</a></li>
                         <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
+                        <li><a href="blog.html">Blog</a></li> {/* Blog eklendi */}
                     </ul>
                 </div>
-                <div class="col-md-2">
-                    <h5>İletişim</h5>
+                <div class="col-md-3"> {/* Genişlik ayarlandı */}
+                    <h5>Diğer</h5>
                     <ul class="list-unstyled">
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                        <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li> {/* Gizlilik Politikası eklendi */}
                     </ul>
                 </div>
             </div>
@@ -220,7 +178,31 @@
         </div>
     </footer>
 
+     <!-- Tema Değiştirme Butonu -->
+    <button class="theme-toggle" id="themeToggle">
+        <i class="bi bi-moon-stars"></i>
+    </button>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../script.js"></script>
+     <script>
+        // Sayfa yüklendiğinde kripto seçeneklerini yükle
+        document.addEventListener('DOMContentLoaded', () => {
+            if (typeof loadCryptoOptions === 'function') {
+                loadCryptoOptions(); // script.js içindeki fonksiyonu çağır
+            }
+             // İlk çeviriyi yap (varsayılan değerlerle)
+             if (typeof convertCrypto === 'function') {
+                 // Seçeneklerin yüklenmesini beklemek için küçük bir gecikme
+                 setTimeout(convertCrypto, 500);
+             }
+             // İsteğe bağlı: Popüler kripto tablosunu yükle
+            // if (typeof loadCryptoMarket === 'function') {
+            //     // loadCryptoMarket fonksiyonu popüler tabloyu dolduracak şekilde güncellenmeli
+            //     // loadCryptoMarket(true); // true parametresi tabloyu doldurmasını sağlayabilir
+            //     // document.querySelector('.mt-5.d-none')?.classList.remove('d-none'); // Tabloyu görünür yap
+            // }
+        });
+    </script>
 </body>
-</html> 
+</html>
